Fri Jul 17 13:35:03 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ciao/Logger/File_Logger_Backend.h:
          Resolved UNICODE compiler errors.

Fri Jul 17 12:48:09 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tools/Config_Handlers/ccd.cpp:
        * tools/Config_Handlers/cdd.cpp:
        * tools/Config_Handlers/cpd.cpp:
          Resolved UNICODE compiler errors.

Fri Jul 17 12:09:55 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tools/Config_Handlers/XMI.cpp:
          Resolved UNICODE compiler errors.

Fri Jul 17 11:50:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ciao/Containers/Session/Session_Container.cpp:
        * tools/XML/XML_Schema_Resolver.cpp:
          Resolved UNICODE compiler errors.

Fri Jul 17 10:26:28 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tools/XML/XML_Schema_Resolver.cpp:
          Resolved UNICODE compiler errors.

Fri Jul 17 07:06:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/DomainApplicationManager/Node_Locator.h:
        * DAnCE/DomainApplicationManager/Node_Locator.cpp:
        * DAnCE/ExecutionManager/ExecutionManager_Module.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.h:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
        * ciao/Logger/File_Logger_Backend.cpp:
        * tests/CIAO_ComponentServer/Activator/client.cpp:
          Resolved UNICODE compiler errors.

        * docs/tutorials/Quoter/Simple/02.html:
          Removed reference toe CIDL.

Wed Jul 15 15:51:36 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Basic_Deployment_Data.cpp:
        * tools/Config_Handlers/XMI.cpp:
        * tools/Config_Handlers/XSCRT/XML.hpp:

         Compile warning fixes.

Wed Jul 15 14:20:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
